fix(list): improve list item spacing, group heading font weight and no-data container height

--- a/packages/bootstrap/scss/list/_layout.scss
+++ b/packages/bootstrap/scss/list/_layout.scss
@@ -3,9 +3,7 @@
 @include exports( "list/layout/bootstrap" ) {
 
     .k-list__group-header { // sass-lint:disable-line class-name-format
-        font-weight: 600;
-        font-size: $font-size-sm;
-        box-shadow: none;
+        font-weight: bold;
     }
 
 }
